--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "react-router-dom": "^6.2.1",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.0.4",
+
   },
   "scripts": {
     "start": "react-scripts start",
