--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^6.2.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.0.4",
-
+    "react-bootstrap": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
