--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
