--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "date-fns": "^2.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
